...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/title_note"
                android:inputType="textMultiLine"
                android:textSize="23sp"
                android:autofillHints="no" />

            <EditText
                android:id="@+id/editTextNoteDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
...
