<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_note"
        android:icon="@drawable/outline_bookmark_add_24"
        android:title="Заметки" />

    <item
        android:id="@+id/navigation_task"
        android:icon="@drawable/outline_add_task_24"
        android:title="Задачи" />

    <item
        android:id="@+id/navigation_password"
        android:icon="@drawable/baseline_password_24"
        android:title="Пароли" />

</menu>